# Amadeus-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  api.py  docker-compose.yml  pyproject.toml
app/: agent.py  ai.py  api.py  fet_payments.py  main.py  notification.py  prompt.md  skyfire.py
app/templates/: transfer_cancellation.jinja  transfer_confirmation.jinja
